cursus/services/srcs/phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: ft_services
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 80
    nodePort: 5000
  selector:
    app: ft_services
    tier: phpmyadmin
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: ft_services
spec:
  selector:
    matchLabels:
      app: ft_services
      tier: phpmyadmin
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: ft_services
        tier: phpmyadmin
    spec:
      restartPolicy: Always
      containers:
      - name: phpmyadmin
        image: ft_phpmyadmin
        imagePullPolicy: Never
        ports:
        - containerPort: 80
