cursus/services/srcs/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: ft_services
spec:
  ports:
  - port: 5050
    targetPort: 5050
    nodePort: 5050
  selector:
    app: ft_services
    tier: wordpress
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: ft_services
spec:
  selector:
    matchLabels:
      app: ft_services
      tier: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ft_services
        tier: wordpress
    spec:
      restartPolicy: Always
      containers:
      - image: ft_wordpress
        imagePullPolicy: Never
        name: wordpress
        ports:
        - containerPort: 5050
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
